src/objects/sma__MAEventBaseObj__c.object
<CustomObject>
    <fields>
        <fullName>sma__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__EventObject__c</fullName>
        <label>EventObject</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MABaseObjectField__c</fullName>
        <label>MapAnything Base Object Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Options__c</fullName>
        <label>Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MapAnything Event Base Object</label>
    <listViews>
        <fullName>sma__All</fullName>
        <columns>NAME</columns>
        <columns>sma__Enabled__c</columns>
        <columns>sma__EventObject__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>sma__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MapAnything Event Base Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Event Base Objects</pluralLabel>
    <recordTypes>
        <fullName>sma__Custom</fullName>
        <active>true</active>
        <label>Custom</label>
    </recordTypes>
    <recordTypes>
        <fullName>sma__Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>